--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "jwt-decode": "^3.1.2",
     "mogoose": "^0.0.1-security",
     "mongoose": "^6.0.13"
+  },
+  "devDependencies": {
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3"
   }
 }
